--- a/FrontEndHomework/Homework1/index.html
+++ b/FrontEndHomework/Homework1/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <title> Login </title>
 
+   
     <script src="/Scripts/jquery-3.6.0.min.js"></script>
-    <script src="/Main.js"></script>
+    <script src="/Homework1/Main.js"></script>
 </head>
 <body>
     <form method="post">
