--- a/FrontEndHomework/Homework3/index.html
+++ b/FrontEndHomework/Homework3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Login </title>
-    <script src="Main.js"></script>
+    
 </head>
 <body>
     <form method="post">
@@ -14,6 +14,7 @@
                 <th>Price</th>
             </tr>
         </table>
+        <script src="../Homework3/Main.js"></script>
     </form>
 </body>
 </html>
